refactor(core): 优化文档生成、设置管理及任务处理逻辑
- 将 AbstractGenerateJavaDocAction 中 generateDocumentation 方法修改为 void，简化文档生成流程
- AIRequestComposer 增加类模板占位符解析，支持自定义作者、版本、日期和邮箱标签
- CustomJavaDocTagRegistrar 调整标签字符串拼接方式，提升效率与规范
- JavaDocSettingsPanel 增加自定义 JavaDoc 标签默认值输入，优化标签表格与提示显示
- SettingsState 自定义标签由 List<String> 改为 List<CustomJavaDocTag>，并初始化默认标签
- TaskExecutor 改进任务类型 Emoji 映射，优化多线程任务处理方式及统计信息展示
- 新增 MavenUtil 工具类，实现 Maven 项目版本号提取和作者信息获取
- 新增 SystemUtils 工具类，支持系统属性和环境变量访问及操作系统类型判断
- 资源文件新增类提示占位符说明及自定义标签默认值列多语言支持